added the date picker
still need formatting and the toast messages

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,38 +6,92 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   <DatePicker
-       android:id="@+id/datePicker1"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="20dp"
-       android:layout_marginStart="20dp"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       />
+    <Button
+        android:id="@+id/pickADate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Pick A Date" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePicker1"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/show_date"
-        />
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="80dp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pickADate"
+        android:text="show" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/activity1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="100dp"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/button1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="20dp"
+        android:text="Activity 1"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/pickADate"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/activity1Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="20dp"
+        android:text=""
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/pickADate"
+        app:layout_constraintStart_toEndOf="@+id/activity1"/>
+
+    <TextView
+        android:id="@+id/activity2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:text="Activity 2"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/activity1"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/activity2Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:text=""
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/activity1"
+        app:layout_constraintStart_toEndOf="@+id/activity2"/>
+
+    <TextView
+        android:id="@+id/activity3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:text="Activity 2"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/activity2"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/activity3Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:text=""
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/activity2"
+        app:layout_constraintStart_toEndOf="@+id/activity3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
